<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/login"
        android:title="@string/login"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/notifications"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>