<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/announcementsFragment">

    <fragment
        android:id="@+id/announcementsFragment"
        android:name="gr.ihu.iee.aboard.android.ui.announcements.AnnouncementsFragment"
        android:label="@string/announcements"
        tools:layout="@layout/fragment_announcements">
        <action
            android:id="@+id/action_announcementsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_announcementsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_announcementsFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_announcementsFragment_to_notificationsFragment"
            app:destination="@id/notificationsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_announcementsFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="gr.ihu.iee.aboard.android.ui.announcements.details.DetailsFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="title"
            android:defaultValue="Ανακοίνωση"
            app:argType="string" />
        <deepLink
            android:id="@+id/deepLink"
            android:autoVerify="true"
            app:uri="http://aboard.iee.ihu.gr/announcements/{id}" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="gr.ihu.iee.aboard.android.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_profileFragment_to_subscribeFragment"
            app:destination="@id/subscribeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/authenticationFragment"
        android:name="gr.ihu.iee.aboard.android.ui.authentication.AuthenticationFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_authentication" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="gr.ihu.iee.aboard.android.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notificationsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="gr.ihu.iee.aboard.android.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/subscribeFragment"
        android:name="gr.ihu.iee.aboard.android.ui.subscribe.SubscribeFragment"
        android:label="@string/subscribed_tags"
        tools:layout="@layout/fragment_subscribe" />
</navigation>